--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
 	<meta charset="utf-8">
 
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-	<link href='normalize.css' rel='stylesheet' type='text/css'>
+	<link href='css/normalize.css' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Stalemate' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Arvo' rel='stylesheet' type='text/css'>
 
 	<script src="https://cdn.firebase.com/js/client/1.1.1/firebase.js"></script>
-	<script src="notify.min.js"></script>
+	<script src="js/notify.min.js"></script>
 
-	<script src="writer.js"></script>
+	<script src="js/writer.js"></script>
 
 	<title>Lyrae - A small lyric stash</title>
-	<link rel="stylesheet" href="stylesheet.css">
+	<link rel="stylesheet" href="css/stylesheet.css">
 
 </head>
 
