--- a/mobileLogin.html
+++ b/mobileLogin.html
@@ -5,14 +5,14 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="mobiStylesheet.css">
+	<link rel="stylesheet" href="css/mobiStylesheet.css">
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-	<link href='normalize.css' rel='stylesheet' type='text/css'>
+	<link href='css/normalize.css' rel='stylesheet' type='text/css'>
 
 	<script src="https://cdn.firebase.com/js/client/1.1.1/firebase.js"></script>
-	<script src="notify.min.js"></script>
+	<script src="js/notify.min.js"></script>
 
-	<script src="mobiWriter.js"></script>
+	<script src="js/mobiWriter.js"></script>
 </head>
 <body>
 
