--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!doctype html>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-
 <html lang="en">
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<meta charset="utf-8">
 
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
@@ -41,7 +40,7 @@
 				<p class="miniTitle">SONG</p>
 				<input type="text" id="song" autocomplete="off">
 				<p class="miniTitle">LYRICS</p>
-				<textarea rows="8" type="text" id="lyric" autocomplete="off"></textarea>
+				<textarea rows="8" id="lyric" autocomplete="off"></textarea>
 				<input type="submit" value="Submit" class="submitbutton" />
 			</div>
 		</form>
